# cpp-checkers

./: CMakeLists.txt  Makefile  README.md  entr.sh
src/app/: CMakeLists.txt  main.cpp
src/lib/: Board.cpp  CMakeLists.txt  Game.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Tile.cpp
src/lib/ai/algorithm/: Algorithm.cpp  Algorithm.hpp
src/lib/ai/heuristic/: Heuristic.cpp  Heuristic.hpp  PieceValue.hpp
src/lib/board/: Board.cpp  Board.hpp
src/lib/game/: Game.cpp  Game.hpp  GameResult.cpp  GameResult.hpp
src/lib/include/: Board.hpp  Game.hpp  Move.hpp  Pawn.hpp  Piece.hpp  PieceType.hpp  Queen.hpp  Tile.hpp
src/lib/move/: Move.cpp  Move.hpp
src/lib/move/generator/: MoveGenerator.cpp  MoveGenerator.hpp
src/lib/piece/: Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceType.hpp  Queen.cpp
src/lib/piece/pawn/: Pawn.cpp  Pawn.hpp
src/lib/piece/queen/: Queen.cpp  Queen.hpp
src/lib/player/: AI.cpp  AI.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp
src/lib/tile/: Tile.cpp  Tile.hpp
src/tests/: CMakeLists.txt  ai_test.cpp  board_test.cpp  game_test.cpp  move_generator_test.cpp  move_test.cpp  piece_test.cpp  player_test.cpp  tile_test.cpp
